switched to ManifestResourceBundle (lang properties outside of jar)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4631 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de_DE.properties
+++ b/plugin_de_DE.properties
@@ -3,6 +3,17 @@
 # NightLabs GmbH
 # ***************************************
 
+
+# ****************************************************************************
+#                       Properties for the plugin.xml
+# ****************************************************************************
+
+
+
+# ****************************************************************************
+#                       Properties for the Classes
+# ****************************************************************************
+
 # ***************************************
 # Login Dialog Labels
 # ***************************************
