translation - de started
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@4790 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de_DE.properties
+++ b/plugin_de_DE.properties
@@ -49,3 +49,46 @@ login.error.offlineDecision = Benutzer entschied, offline zu arbeiten.
 # **************************************
 extensionpoint.throwable.dialog.title = Ein Fehler ist aufgetreten
 extensionpoint.throwable.dialog.expandText = Details (Stacktrace)
+
+# **************************************
+# Actions
+# **************************************
+actions.login.icons.login = icons/Login_login.png
+actions.login.icons.logout = icons/Login_logout.png
+actions.login.tooltip.login = JFire Login
+actions.login.tooltip.logout = JFire Logout
+action.new.unnamed = Unbenannt
+
+# **************************************
+# Menus
+# **************************************
+menu.openrecentfiles.text = Letzte Dateien
+
+# **************************************
+# Person Management
+# **************************************
+person.preferences.pages.PersonStructOrder.blockstable.col0=Struktur-Blöcke
+person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
+
+person.search.result.table.col0=Person
+
+person.edit.wizard.pages.PersonalDataPage.labels.displayName=Angezeige-Name
+person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Autocreate display-name from person data
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=A name has to be specified
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=A firstname has to be specified
+
+
+
+# **************************************
+# LanguageWatcher
+# **************************************
+language.watcher.restartdialog.title=Neustart in bevorzugter Sprache
+language.watcher.restartdialog.message.startedWith=JFire wurde mit folgender Sprache gestartet:
+language.watcher.restartdialog.message.userPrefered=\nIhre bevorzugteSprache ist 
+language.watcher.restartdialog.message.question=Soll JFire mit Ihrer bevorzugten Sprache neu gestartet werden?
+
+# **************************************
+# Update
+# **************************************
+update.message.checkingForUpdates=Updates werden untersucht...
+update.message.pleaseRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
