JFireBase LoginIcons + PerspectiveExtensions for actionsSets
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@5825 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de_DE.properties
+++ b/plugin_de_DE.properties
@@ -53,8 +53,8 @@ extensionpoint.throwable.dialog.expandText = Details (Stacktrace)
 # **************************************
 # Actions
 # **************************************
-actions.login.icons.login = icons/Login_login.png
-actions.login.icons.logout = icons/Login_logout.png
+actions.login.icons.login = icons/Login.16x16.png
+actions.login.icons.logout = icons/Logout.16x16.png
 actions.login.tooltip.login = JFire Login
 actions.login.tooltip.logout = JFire Logout
 action.new.unnamed = Unbenannt
