JFireBase.*.config.Config:  - added new JPOX query to get all config ids corresponding to configs of a given Type
JFireBase.*.config.ConfigManagerBean:
 - implemented a Method using the query mentioned above and restructured another one

org.nightlabs.*.base.config.*DAO:
 - restructured JDOObjectDAO to simplify getJDOObjects method
 - restructured ConfigDAO to use the cache (it bypassed it before) and IProgressMonitors
 - implemented ConfigModuleDAO deprecating ConfigModuleProvider

org.nightlabs.*.base.config.ConfigUtil:
 - restructured to use the ConfigModuleDAO

other files:
 - adaptet these classes to use the changed DAOs


git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6411 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -1,5 +1,5 @@
 AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The configuration cannot be changed, since the group settings are non-overwritable\! Any changes will be ignored\!
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ButtonText=Reset to group configuration
-AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogHeading=Truly reset the current configuration to groups standard?
-AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogMessage=Attention: The reset will be done on the database and cannot be reset otherwise than manually changing the configuration\!
+AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogHeading=Truly reset the current configuration to group's standard?
+AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogMessage=Attention: The reset will be done on the database and cannot be reset other means than manually changing the configuration\!
 AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
