--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -3,3 +3,14 @@ AbstractConfigModulePreferencePage.ResetToGroupConfig_ButtonText=Reset to group 
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogHeading=Truly reset the current configuration to group's standard?
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogMessage=Attention: The reset will be done on the database and cannot be reset other means than manually changing the configuration\!
 AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
+UserTable.userID=UserID
+UserTable.name=Name
+UserTable.description=Description
+UserSearchDialog.Search=Search
+UserSearchComposite.name=Name
+UserTable.userType=UserType
+UserTable.changeDT=ChangeDT
+UserSearchDialog.SearchUser=Search User
+UserSearchComposite.userID=UserID
+UserSearchComposite.userType=UserType
+UserSearchComposite.LoadingEvent=Loading Event
