--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -1,4 +1,4 @@
-AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The configuration cannot be changed, since the group settings are non-overwritable\! Any changes will be ignored\!
+AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The configuration cannot be changed, since the group settings are non-overwritable\!\n Any changes will be ignored\!
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ButtonText=Reset to group configuration
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogHeading=Truly reset the current configuration to group's standard?
 AbstractConfigModulePreferencePage.ResetToGroupConfig_ConfirmationDialogMessage=Attention: The reset will be done on the database and cannot be reset other means than manually changing the configuration\!
