ConfigModule:  - standard FielMetaData sets isValueInherited = false;
InheritanceToggleButton:
 - stores selected state in a private member such that there is no need to run 
	getSelected on the UI-thread

AbstractConfigModulePrefPage:
 - major restructuring

git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6684 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -1,4 +1,4 @@
-AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The configuration cannot be changed, since the group settings are non-overwritable\!\n Any changes will be ignored\!
+AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The group's settings don't allow the configuration to be edited.
 AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
 UserTable.userID=UserID
 UserTable.name=Name
