--- a/plugin_de_DE.properties
+++ b/plugin_de_DE.properties
@@ -8,7 +8,7 @@
 #                       Properties for the plugin.xml
 # ****************************************************************************
 
-
+perspectives.overview.name = Übersicht
 
 # ****************************************************************************
 #                       Properties for the Classes
