- login async - some l10n
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6978 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de_DE.properties
+++ b/plugin_de_DE.properties
@@ -1,68 +1,65 @@
-# ***************************************
-# Copyright (c) 2004
-# NightLabs GmbH
-# ***************************************
+# **************************************
+# Copyright (c) 2007 - www.NightLabs.org
+# **************************************
 
 
 # ****************************************************************************
 #                       Properties for the plugin.xml
 # ****************************************************************************
 
-perspectives.overview.name = Übersicht
+# not in use?
+#productName=JFire
+# not in use?
+#views.category.name=General
+# not in use?
+#exceptionhandler.throwable.name=Exception Handler for Throwable
+
+appName=JFire
+swtAppName=JFire
+aboutText=JFire\n
+(c) Copyright NightLabs GmbH 2004. All rights reserved.\n\
+Visit http://jfire.org
+
+perspectives.jfireWelcome.name=Willkommen
+perspectives.overview.name=Übersicht
+
+views.overview.name=Übersicht
+views.overview.category.name=Übersicht
+
+login.menu.label=Anmelden
+login.action.label=JFire &Anmeldung
+login.action.toolTip=JFire Anmeldung
+
+person.preferences.pages.PersonManagement.name=Personen Verwaltung
+person.preferences.pages.PersonStructOrder.name=Struktur Anzeigereihenfolge
+person.preferences.pages.PersonStructOrder.blockstable.col0=Struktur-Blöcke
+person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
 
 # ****************************************************************************
 #                       Properties for the Classes
 # ****************************************************************************
 
-# ***************************************
-# Login Dialog Labels
-# ***************************************
-
-login.label.login = Login
-login.label.user = BenutzerName: 
-login.label.pass = Passwort: 
-login.label.details = Erweiterte Einstellungen: 
-login.label.organisation = Organisation: 
-login.label.serverURL = Server URL: 
-login.label.initialContext = InitialContext Factory: 
-login.label.securityProtocol = Security Protocol: 
-login.label.saveSettings = Einstellungen speichern
-login.label.button.login = Login
-login.label.button.offline = Offline arbeiten
-login.label.button.quit = Abrechen
-
-# ***************************************
-# Login Dialog Error Messages
-# ***************************************
-login.error.missingUserID = Geben Sie einen Benutzernamen an.
-login.error.missingOrganisationID = Geben Sie eine Organisation an.
-login.error.missingContextFactory = Geben Sie die initial context factory an.
-login.error.missingServerURL = Geben Sie eine server URL an.
-login.error.missingSecurityProtocol = Definieren Sie das security protocol.
-login.error.unhadledExceptionMessage = Ein Fehler trat während des Logins auf.
-login.error.authenticationFailed = Authentifizierung fehlgeschlagen.\nÜberprüfen Sie Benutzername, Passwort und Organisation.
-login.error.communicatinError = Kommunikationsfehler! Überprüfen Sie die Server URL.\nFehlermeldung: 
-login.error.offlineDecision = Benutzer entschied, offline zu arbeiten.
-
 # **************************************
 # ThrowableHandler Dialog Messages
 # **************************************
-extensionpoint.throwable.dialog.title = Ein Fehler ist aufgetreten
-extensionpoint.throwable.dialog.expandText = Details (Stacktrace)
+# not in default plugin.propertis - thus not in use?
+#extensionpoint.throwable.dialog.title=Ein Fehler ist aufgetreten
+#extensionpoint.throwable.dialog.expandText=Details (Stacktrace)
 
 # **************************************
 # Actions
 # **************************************
-actions.login.icons.login = icons/Login.16x16.png
-actions.login.icons.logout = icons/Logout.16x16.png
-actions.login.tooltip.login = JFire Login
-actions.login.tooltip.logout = JFire Logout
-action.new.unnamed = Unbenannt
+# not used:
+#actions.login.icons.login=icons/Login.16x16.png
+#actions.login.icons.logout=icons/Logout.16x16.png
+actions.login.tooltip.login=JFire Anmeldung
+actions.login.tooltip.logout=Von JFire abmelden
+action.new.unnamed=Unbenannt
 
 # **************************************
 # Menus
 # **************************************
-menu.openrecentfiles.text = Letzte Dateien
+menu.openrecentfiles.text=Letzte Dateien
 
 # **************************************
 # Person Management
@@ -72,10 +69,10 @@ person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
 
 person.search.result.table.col0=Person
 
-person.edit.wizard.pages.PersonalDataPage.labels.displayName=Angezeige-Name
-person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Autocreate display-name from person data
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=A name has to be specified
-person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=A firstname has to be specified
+person.edit.wizard.pages.PersonalDataPage.labels.displayName=Angezeigename
+person.edit.wizard.pages.PersonalDataPage.labels.autoCreateDisplayName=Anzeigename automatisch aus Personendaten erstellen
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyName=Geben Sie einen Namen an
+person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=Geben Sie einen Vornamen an
 
 
 
@@ -84,11 +81,11 @@ person.edit.wizard.pages.PersonalDataPage.errormessage.specifyFirstName=A firstn
 # **************************************
 language.watcher.restartdialog.title=Neustart in bevorzugter Sprache
 language.watcher.restartdialog.message.startedWith=JFire wurde mit folgender Sprache gestartet:
-language.watcher.restartdialog.message.userPrefered=\nIhre bevorzugteSprache ist 
+language.watcher.restartdialog.message.userPrefered=\nIhre bevorzugte Sprache ist 
 language.watcher.restartdialog.message.question=Soll JFire mit Ihrer bevorzugten Sprache neu gestartet werden?
 
 # **************************************
 # Update
 # **************************************
 update.message.checkingForUpdates=Updates werden untersucht...
-update.message.pleaseRestart=The application has to be restarted to finish the update. Please press 'OK' to restart.
+update.message.pleaseRestart=Die Anwendung muss neu gestarted werden um die Aktualisierung abzuschließen. Klicken Sie auf 'OK' um neu zu starten.
