--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -1,13 +1,41 @@
-AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The group's settings don't allow the configuration to be edited.
-AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
-UserTable.userID=UserID
-UserTable.name=Name
-UserTable.description=Description
-UserSearchDialog.Search=Search
-UserSearchComposite.name=Name
-UserTable.userType=UserType
-UserTable.changeDT=ChangeDT
-UserSearchDialog.SearchUser=Search User
-UserSearchComposite.userID=UserID
-UserSearchComposite.userType=UserType
-UserSearchComposite.LoadingEvent=Loading Event
+config.AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The group's settings don't allow the configuration to be edited.
+config.AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
+
+security.UserTable.userID=UserID
+security.UserTable.name=Name
+security.UserTable.description=Description
+security.UserTable.userType=UserType
+security.UserTable.changeDT=ChangeDT
+
+security.UserSearchDialog.Search=Search
+security.UserSearchDialog.SearchUser=Search User
+security.UserSearchComposite.name=Name
+security.UserSearchComposite.userID=UserID
+security.UserSearchComposite.userType=UserType
+security.UserSearchComposite.LoadingEvent=Loading Event
+
+login.LoginDialog.labellogin=Login
+login.LoginDialog.labeluser=Username: 
+login.LoginDialog.labelpass=Password: 
+login.LoginDialog.labelworkstation=Workstation:
+login.LoginDialog.labeldetails=Details: 
+login.LoginDialog.labelorganisation=Organisation: 
+login.LoginDialog.labelserverURL=Server URL: 
+login.LoginDialog.labelinitialContext=InitialContext Factory: 
+login.LoginDialog.labelsecurityProtocol=Security Protocol: 
+login.LoginDialog.labelsaveSettings=&Save settings
+login.LoginDialog.labelbutton.login=&Login
+login.LoginDialog.labelbutton.offline=Work &offline
+
+login.LoginDialog.errormissingUserID=You must specify an username.
+login.LoginDialog.errorSaveConfig=Saving config failed\!
+login.LoginDialog.errormissingOrganisationID=You must specify an organisation.
+login.LoginDialog.errormissingContextFactory=You must specify an InitialContext Factory.
+login.LoginDialog.errormissingServerURL=You must specify a server URL.
+login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
+login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
+login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
+login.LoginDialog.errorofflineDecision=User decided to work offline
+login.LoginDialog.errormissingWorkstationID=You must specify a workstation
+
+login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
