- info text while auth - l10n
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@6980 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -18,9 +18,10 @@ login.LoginDialog.labellogin=Login
 login.LoginDialog.labeluser=Username: 
 login.LoginDialog.labelpass=Password: 
 login.LoginDialog.labelworkstation=Workstation:
-login.LoginDialog.labeldetails=Details: 
+login.LoginDialog.tryingLogin=Trying to login...
 login.LoginDialog.labelorganisation=Organisation: 
 login.LoginDialog.labelserverURL=Server URL: 
+login.LoginDialog.authentication=Authentication...
 login.LoginDialog.labelinitialContext=InitialContext Factory: 
 login.LoginDialog.labelsecurityProtocol=Security Protocol: 
 login.LoginDialog.labelsaveSettings=&Save settings
@@ -29,6 +30,7 @@ login.LoginDialog.labelbutton.offline=Work &offline
 
 login.LoginDialog.errormissingUserID=You must specify an username.
 login.LoginDialog.errorSaveConfig=Saving config failed\!
+login.LoginDialog.errorAppend=\n%1$s: %2$s
 login.LoginDialog.errormissingOrganisationID=You must specify an organisation.
 login.LoginDialog.errormissingContextFactory=You must specify an InitialContext Factory.
 login.LoginDialog.errormissingServerURL=You must specify a server URL.
