--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -18,9 +18,10 @@ login.LoginDialog.labellogin=Anmeldung
 login.LoginDialog.labeluser=Benutzername: 
 login.LoginDialog.labelpass=Passwort: 
 login.LoginDialog.labelworkstation=Arbeitsplatz:
-login.LoginDialog.labeldetails=Erweiterte Einstellungen: 
+login.LoginDialog.tryingLogin=Versuche Anmeldung...
 login.LoginDialog.labelorganisation=Organisation: 
 login.LoginDialog.labelserverURL=Server URL: 
+login.LoginDialog.authentication=Authentifizierung...
 login.LoginDialog.labelinitialContext=InitialContext Factory: 
 login.LoginDialog.labelsecurityProtocol=Sicherheitsprotokoll: 
 login.LoginDialog.labelsaveSettings=&Einstellungen speichern
@@ -29,6 +30,7 @@ login.LoginDialog.labelbutton.offline=&Offline arbeiten
 
 login.LoginDialog.errormissingUserID=Geben Sie einen Benutzernamen an.
 login.LoginDialog.errorSaveConfig=Die Konfiguration konnte nicht gespeichert werden\!
+login.LoginDialog.errorAppend=\n%1$s: %2$s
 login.LoginDialog.errormissingOrganisationID=Geben Sie eine Organisation an.
 login.LoginDialog.errormissingContextFactory=Geben Sie die InitialContext Factory an.
 login.LoginDialog.errormissingServerURL=Geben Sie eine Server URL an.
