- login dialog fix - l10n
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7022 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -18,16 +18,17 @@ login.LoginDialog.labellogin=Anmeldung
 login.LoginDialog.labeluser=Benutzername: 
 login.LoginDialog.labelpass=Passwort: 
 login.LoginDialog.labelworkstation=Arbeitsplatz:
+login.LoginDialog.titleAreaMessage=Geben Sie Ihre Benutzerdaten ein und klicken sie auf "Anmelden" oder arbeiten Sie Offline
 login.LoginDialog.tryingLogin=Versuche Anmeldung...
 login.LoginDialog.labelorganisation=Organisation: 
 login.LoginDialog.labelserverURL=Server URL: 
 login.LoginDialog.authentication=Authentifizierung...
+login.LoginDialog.titleAreaTitle=Bitte melden Sie sich an
 login.LoginDialog.labelinitialContext=InitialContext Factory: 
 login.LoginDialog.labelsecurityProtocol=Sicherheitsprotokoll: 
 login.LoginDialog.labelsaveSettings=&Einstellungen speichern
 login.LoginDialog.labelbutton.login=&Anmelden
 login.LoginDialog.labelbutton.offline=&Offline arbeiten
-
 login.LoginDialog.errormissingUserID=Geben Sie einen Benutzernamen an.
 login.LoginDialog.errorSaveConfig=Die Konfiguration konnte nicht gespeichert werden\!
 login.LoginDialog.errorAppend=\n%1$s: %2$s
