--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -18,16 +18,17 @@ login.LoginDialog.labellogin=Login
 login.LoginDialog.labeluser=Username: 
 login.LoginDialog.labelpass=Password: 
 login.LoginDialog.labelworkstation=Workstation:
+login.LoginDialog.titleAreaMessage=Enter your user data and press login - or choose to work offline
 login.LoginDialog.tryingLogin=Trying to login...
 login.LoginDialog.labelorganisation=Organisation: 
 login.LoginDialog.labelserverURL=Server URL: 
 login.LoginDialog.authentication=Authentication...
+login.LoginDialog.titleAreaTitle=Please login
 login.LoginDialog.labelinitialContext=InitialContext Factory: 
 login.LoginDialog.labelsecurityProtocol=Security Protocol: 
 login.LoginDialog.labelsaveSettings=&Save settings
 login.LoginDialog.labelbutton.login=&Login
 login.LoginDialog.labelbutton.offline=Work &offline
-
 login.LoginDialog.errormissingUserID=You must specify an username.
 login.LoginDialog.errorSaveConfig=Saving config failed\!
 login.LoginDialog.errorAppend=\n%1$s: %2$s
