--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -42,3 +42,10 @@ login.LoginDialog.errorofflineDecision=User decided to work offline
 login.LoginDialog.errormissingWorkstationID=You must specify a workstation
 
 login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
+
+entity.tree.ActiveJDOEntityTreeCategory.loadingData=Loading data...
+
+tree.ActiveTreeContentProvider.loadingNewJDOObjects=Loading New jdoObjects
+tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Loading Changed jdoObjects
+tree.ActiveTreeContentProvider.loadingDataJob=Loading data...
+tree.ActiveTreeContentProvider.loadingData=Loading data...
