--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -42,3 +42,10 @@ login.LoginDialog.errorofflineDecision=Benutzer entschied, offline zu arbeiten.
 login.LoginDialog.errormissingWorkstationID=Bitte geben Sie einen Arbeitsplatz an.
 
 login.Login.errorUnhandledExceptionMessage=Während der Anmeldung trat ein Fehler auf.
+
+entity.tree.ActiveJDOEntityTreeCategory.loadingData=Daten werden geladen...
+
+tree.ActiveTreeContentProvider.loadingNewJDOObjects=Lade neue JDO Objekte
+tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Lade geänderte JDO Objekte
+tree.ActiveTreeContentProvider.loadingDataJob=Daten werden geladen...
+tree.ActiveTreeContentProvider.loadingData=Daten werden geladen...
