--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -1,11 +1,74 @@
 config.AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The group's settings don't allow the configuration to be edited.
+config.AbstractConfigModulePreferencePage.loadingLabel=Loading...
+config.AbstractConfigModulePreferencePage.fetchJobName=Fetch ConfigModule Information
+config.WorkstationCSVisualiser.configGroupDescription=ConfigGroup %s
+config.AbstractConfigModulePreferencePage.gettingModuleDataTask=Getting the Module data
+config.AbstractConfigModulePreferencePage.editLockWarning=This ConfigModule is already opened by someone else\!
+config.AbstractConfigModulePreferencePage.noGroup=The config is in no group.
+config.AbstractConfigModulePreferencePage.inheritFromGroup=Inherit the settings of this config module from its group?
+config.WorkstationCSVisualiser.workstationConfigDescription=Config for workstation %s
 config.AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
 
-security.UserTable.userID=UserID
-security.UserTable.name=Name
-security.UserTable.description=Description
-security.UserTable.userType=UserType
-security.UserTable.changeDT=ChangeDT
+config.ConfigPreferencesComposite.noPreferencePage=This ConfigModule has no PreferencePage registered to edit it\!
+config.ConfigPreferencesEditComposite2.updateingJob=Updating ConfigModule
+config.ConfigPreferencesEditComposite2.lockCheckJob=Checking for Locks
+config.ConfigPreferencesEditComposite2.initialising=Initialising...
+config.ConfigPreferencesEditComposite2.editLockWarning=This Config is currently edited by someone else\!
+
+entity.tree.ActiveJDOEntityTreeCategory.loadingData=Loading data...
+
+login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
+
+login.LoginDialog.labellogin=Login
+login.SplashLoginPanel.login=Login
+login.LoginDialog.labeluser=Username: 
+login.LoginDialog.labelpass=Password: 
+login.SplashLoginPanel.quit=Quit
+login.LoginDialog.labelworkstation=Workstation:
+login.LoginDialog.titleAreaMessage=Enter your user data and press login - or choose to work offline
+login.SplashLoginPanel.pleaseLogin=Welcome to JFire\! Please log in now.
+login.SplashLoginPanel.workstation=Workstation:
+login.SplashLoginPanel.workOffline=Work OFFLINE
+login.JFireLoginHandler.tryToLogin=Try to log in ...
+login.LoginDialog.tryingLogin=Trying to login...
+login.LoginDialog.labelorganisation=Organisation: 
+login.LoginDialog.labelserverURL=Server URL: 
+login.LoginDialog.authentication=Authentication...
+login.LoginDialog.titleAreaTitle=Please login
+login.Login.rebootDialogMessage=Your class loading configuration was changed in order to make all published server classes available. A restart is required.
+login.SplashLoginPanel.username=Username:
+login.SplashLoginPanel.password=Password:
+login.SplashLoginPanel.serverURL=ServerURL:
+login.LoginDialog.labelinitialContext=InitialContext Factory: 
+login.LoginDialog.labelsecurityProtocol=Security Protocol: 
+login.LoginDialog.labelsaveSettings=&Save settings
+login.LoginDialog.labelbutton.login=&Login
+login.SplashLoginPanel.organisation=Organisation:
+login.SplashLoginPanel.saveSettings=Save settings to config
+login.JFireLoginHandler.workOffline=Work OFFLINE
+login.part.NeedLoginComposite.login=Login
+login.LoginDialog.labelbutton.offline=Work &offline
+login.LoginDialog.errormissingUserID=You must specify an username.
+login.LoginDialog.errorSaveConfig=Saving config failed\!
+login.LoginDialog.errorAppend=\n%1$s: %2$s
+login.Login.rebootDialogTitle=Reboot Required
+login.Login.authenticationJob=Authentication...
+login.SplashLoginPanel.details=Details
+login.LoginDialog.errormissingOrganisationID=You must specify an organisation.
+login.LoginDialog.errormissingContextFactory=You must specify an InitialContext Factory.
+login.SplashLoginPanel.initialContextFactory=InitialContextFactory:
+login.part.NeedLoginComposite.loginToUseView=You need to login to use this view\!
+login.LoginDialog.errormissingServerURL=You must specify a server URL.
+login.SplashLoginPanel.securityProtocol=SecurityProtocol:
+login.JFireLoginHandler.loginSuccessful=Login successful
+login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
+login.LoginStateStatusLineContribution.loggedInStatus=Logged in: %1$s@%2$s on %3$s
+login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
+login.LoginStateStatusLineContribution.offlineStatus=Working offline
+login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
+login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
+login.LoginDialog.errorofflineDecision=User decided to work offline
+login.LoginDialog.errormissingWorkstationID=You must specify a workstation
 
 security.UserSearchDialog.Search=Search
 security.UserSearchDialog.SearchUser=Search User
@@ -14,38 +77,40 @@ security.UserSearchComposite.userID=UserID
 security.UserSearchComposite.userType=UserType
 security.UserSearchComposite.LoadingEvent=Loading Event
 
-login.LoginDialog.labellogin=Login
-login.LoginDialog.labeluser=Username: 
-login.LoginDialog.labelpass=Password: 
-login.LoginDialog.labelworkstation=Workstation:
-login.LoginDialog.titleAreaMessage=Enter your user data and press login - or choose to work offline
-login.LoginDialog.tryingLogin=Trying to login...
-login.LoginDialog.labelorganisation=Organisation: 
-login.LoginDialog.labelserverURL=Server URL: 
-login.LoginDialog.authentication=Authentication...
-login.LoginDialog.titleAreaTitle=Please login
-login.LoginDialog.labelinitialContext=InitialContext Factory: 
-login.LoginDialog.labelsecurityProtocol=Security Protocol: 
-login.LoginDialog.labelsaveSettings=&Save settings
-login.LoginDialog.labelbutton.login=&Login
-login.LoginDialog.labelbutton.offline=Work &offline
-login.LoginDialog.errormissingUserID=You must specify an username.
-login.LoginDialog.errorSaveConfig=Saving config failed\!
-login.LoginDialog.errorAppend=\n%1$s: %2$s
-login.LoginDialog.errormissingOrganisationID=You must specify an organisation.
-login.LoginDialog.errormissingContextFactory=You must specify an InitialContext Factory.
-login.LoginDialog.errormissingServerURL=You must specify a server URL.
-login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
-login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
-login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
-login.LoginDialog.errorofflineDecision=User decided to work offline
-login.LoginDialog.errormissingWorkstationID=You must specify a workstation
-
-login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
-
-entity.tree.ActiveJDOEntityTreeCategory.loadingData=Loading data...
+security.UserTable.userID=UserID
+security.UserTable.name=Name
+security.UserTable.description=Description
+security.UserTable.userType=UserType
+security.UserTable.changeDT=ChangeDT
 
 tree.ActiveTreeContentProvider.loadingNewJDOObjects=Loading New jdoObjects
 tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Loading Changed jdoObjects
 tree.ActiveTreeContentProvider.loadingDataJob=Loading data...
 tree.ActiveTreeContentProvider.loadingData=Loading data...
+config.ChangedConfigModulePagesDialog.title=Changed Config Modules
+config.UserCSVisualiser.configGroupDescription=ConfigGroup %s
+config.UserCSVisualiser.userConfigDescription=Config for user %s
+config.UserCSVisualiser.keyObjectName=%1$s (%2$s)
+editlock.EditLockMan.jobName=Refresh EditLocks
+editlock.EditLockTable.user=User
+editlock.EditLockTable.created=Created
+editlock.EditLockMan.aquireLockTask=Acquire EditLock on Server
+editlock.EditLockMan.releaseLockJob=Release EditLock
+editlock.EditLockCarrierTable.description=Description
+editlock.EditLockCarrierTable.created=Created
+editlock.EditLockCarrierTable.lastActivity=Last User Activity
+editlock.EditLockCollisionWarningDialog.warningText=The object that you are about to edit is currently edited by someone else, too. This might cause collisions and changes to get lost.
+editlock.EditLockCollisionWarningDialog.loadingLabel=Loading data...
+editlock.EditLockCollisionWarningDialog.loadingJob=Loading EditLocks
+editlock.EditLockTable.lastAquired=Last Acquired
+EditLockAboutToExpireDueToUserInactivityDialog.locksToRelease=The following editLocks will be released because of user inactivity:
+jdo.JDOObjectDAO.gettingObjects=Getting %d Objects through Cache
+jdo.ActiveJDOObjectController.loadingNewObjectsJob=Loading New jdoObjects
+jdo.ActiveJDOObjectController.loadingChangedObjectsJob=Loading Changed jdoObjects
+jdo.notification.JDOLifecycleManagerRCP.notificationJob=Processing Notification
+jdo.notification.JDOLifecycleManagerRCP.lifecycleJob=Processing JDOLifecycle
+jdo.tree.ActiveJDOObjectTreeController.loadingChanges=Loading changes ...
+jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=Loading Data
+jdo.ActiveJDOObjectController.loadingDataJob=Loading Data
+jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
+app.JFireActionBuilder.loginStatus=login status
