- https://www.jfire.org/modules/bugs/view.php?id=85 - added Statusline contribution for locale
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7387 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -62,7 +62,7 @@ login.LoginDialog.errormissingServerURL=You must specify a server URL.
 login.SplashLoginPanel.securityProtocol=SecurityProtocol:
 login.JFireLoginHandler.loginSuccessful=Login successful
 login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
-login.LoginStateStatusLineContribution.loggedInStatus=Logged in: %1$s@%2$s on %3$s
+login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
 login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
 login.LoginStateStatusLineContribution.offlineStatus=Working offline
 login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
