ASSIGNED - # 161: Login identities & remove splash login screen https://www.jfire.org/modules/bugs/view.php?id=161
Finished work in Login Identities. Will create a new bug entry for the Splash screen request.

git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7821 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -114,3 +114,8 @@ jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=Loading Data
 jdo.ActiveJDOObjectController.loadingDataJob=Loading Data
 jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
 app.JFireActionBuilder.loginStatus=login status
+LoginDialog.currentIdentityMarker=[current identity]
+LoginDialog.recentLoginsComboLabel=Recent Logins: 
+LoginDialog.identityNameTextLabel=Identity Name:
+LoginDialog.recentLoginCountLabel=Logins to remember: 
+SplashLoginPanel.recentLoginsComboLabel=Recent Logins:
