Bugfixes and amendments of login profiles.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7958 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -69,6 +69,11 @@ login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck userna
 login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
 login.LoginDialog.errorofflineDecision=User decided to work offline
 login.LoginDialog.errormissingWorkstationID=You must specify a workstation
+login.LoginDialog.currentIdentityMarker=[Latest login]
+login.LoginDialog.recentLoginsComboLabel=Recent Logins: 
+login.LoginDialog.identityNameTextLabel=Identity Name:
+login.LoginDialog.recentLoginCountLabel=Logins to remember: 
+login.SplashLoginPanel.recentLoginsComboLabel=Recent Logins:
 
 security.UserSearchDialog.Search=Search
 security.UserSearchDialog.SearchUser=Search User
@@ -114,8 +119,3 @@ jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=Loading Data
 jdo.ActiveJDOObjectController.loadingDataJob=Loading Data
 jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
 app.JFireActionBuilder.loginStatus=login status
-LoginDialog.currentIdentityMarker=[current identity]
-LoginDialog.recentLoginsComboLabel=Recent Logins: 
-LoginDialog.identityNameTextLabel=Identity Name:
-LoginDialog.recentLoginCountLabel=Logins to remember: 
-SplashLoginPanel.recentLoginsComboLabel=Recent Logins:
