Changed the behavior of the login dialog.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@7977 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -43,6 +43,7 @@ login.LoginDialog.labelinitialContext=InitialContext Factory:
 login.LoginDialog.labelsecurityProtocol=Security Protocol: 
 login.LoginDialog.labelsaveSettings=&Save settings
 login.LoginDialog.labelbutton.login=&Login
+login.LoginDialog.deleteButtonLabel=Delete
 login.SplashLoginPanel.organisation=Organisation:
 login.SplashLoginPanel.saveSettings=Save settings to config
 login.JFireLoginHandler.workOffline=Work OFFLINE
@@ -62,6 +63,8 @@ login.LoginDialog.errormissingServerURL=You must specify a server URL.
 login.SplashLoginPanel.securityProtocol=SecurityProtocol:
 login.JFireLoginHandler.loginSuccessful=Login successful
 login.LoginDialog.errormissingSecurityProtocol=You must specify a security protocol.
+login.LoginDialog.validNameMissingErrorMessage=You must specify a name if you want to save the login configuration.
+login.LoginDialog.loginConfigurationAlreadyExists=A login configuration with the given name already exists and will be overridden.
 login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
 login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
 login.LoginStateStatusLineContribution.offlineStatus=Working offline
@@ -72,7 +75,6 @@ login.LoginDialog.errormissingWorkstationID=You must specify a workstation
 login.LoginDialog.currentIdentityMarker=[Latest login]
 login.LoginDialog.recentLoginsComboLabel=Recent Logins: 
 login.LoginDialog.identityNameTextLabel=Identity Name:
-login.LoginDialog.recentLoginCountLabel=Logins to remember: 
 login.SplashLoginPanel.recentLoginsComboLabel=Recent Logins:
 
 security.UserSearchDialog.Search=Search
