--- a/plugin_de.properties
+++ b/plugin_de.properties
@@ -16,8 +16,8 @@
 
 appName=JFire
 swtAppName=JFire
-aboutText=JFire\n
-(c) Copyright NightLabs GmbH 2004. All rights reserved.\n\
+aboutText=JFire\n\
+(c) Copyright NightLabs GmbH 2004-2007. All rights reserved.\n\
 Visit http://jfire.org
 
 perspectives.jfireWelcome.name=Willkommen
@@ -30,7 +30,7 @@ login.menu.label=Anmelden
 login.action.label=JFire &Anmeldung
 login.action.toolTip=JFire Anmeldung
 
-person.preferences.pages.PersonManagement.name=Personen Verwaltung
+person.preferences.pages.PersonManagement.name=Personenverwaltung
 person.preferences.pages.PersonStructOrder.name=Struktur Anzeigereihenfolge
 person.preferences.pages.PersonStructOrder.blockstable.col0=Struktur-Blöcke
 person.preferences.pages.PersonStructOrder.fieldstable.col0=Struktur-Felder
