--- a/plugin_de.properties
+++ b/plugin_de.properties
@@ -17,8 +17,10 @@
 appName=JFire
 swtAppName=JFire
 aboutText=JFire\n\
-(c) Copyright NightLabs GmbH 2004-2007. All rights reserved.\n\
-Visit http://jfire.org
+(c) Copyright NightLabs GmbH 2004-2007. Alle Rechte vorbehalten.\n\
+Besuchen Sie http://jfire.org\n\
+\n\
+Dieses Produkt enthält Software von Dritten. Details dazu finden sie auf der Webseite.
 
 perspectives.jfireWelcome.name=Willkommen
 perspectives.overview.name=Übersicht
